tests/arrows/arrows.exp
Error: advanced_arrows.js:7
  7: var bad = (x: number): string => x; // Error!
                                      ^ number. This type is incompatible with the expected return type of
  7: var bad = (x: number): string => x; // Error!
                            ^^^^^^ string

Error: advanced_arrows.js:11
 11: (ident("hi"): number); // Error
      ^^^^^^^^^^^ string. This type is incompatible with
 11: (ident("hi"): number); // Error
                   ^^^^^^ number

Error: arrows.js:7
  7:     images = images.sort((a, b) => (a.width - b.width) + "");
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
269:     sort(compareFn?: (a: T, b: T) => number): Array<T>;
                          ^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:269
  The return is incompatible:
      7:     images = images.sort((a, b) => (a.width - b.width) + "");
                                            ^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
    269:     sort(compareFn?: (a: T, b: T) => number): Array<T>;
                                              ^^^^^^ number. See lib: <BUILTINS>/core.js:269


Found 3 errors
